# CortexFlow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
postman/: CortexFlow.postman_collection.json  CortexFlow.postman_environment.json  README.md
src/: main.py
src/agents/: conversation_agent.py
src/agents/prompt/: conversation_agent_prompt.md
src/core/: database.py  security.py  settings.py
src/middlewares/: cors_middleware.py
src/models/: auth.py  chat.py  documents.py  embeddings.py  provider_models.py
src/routers/: auth.py  chat.py  documents.py  models.py
src/schemas/: auth.py  chat.py  documents.py  embeddings.py  models.py  provider_models.py
src/services/: chat.py  chuncking.py  documents.py  embeddings.py  file_validator.py  parsers.py  vector_search.py
src/services/database/: auth_db.py  chat_db.py  db.py  documents_db.py  embeddings_db.py  models_db.py
src/utils/: batch_utils.py
