[project]
name = "CortexFlow"
version = "0.0.1"
description = "An asynchronous RAG (Retrieval-Augmented Generation) backend built with FastAPI, MongoDB Atlas Vector Search, and Agno agents, featuring secure user isolation, customizable document chunking, and real-time WebSocket streaming."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "agno==2.6.5",
    "aiofiles==25.1.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==5.0.0",
    "beanie==2.1.0",
    "beautifulsoup4==4.14.3",
    "blis==1.3.3",
    "catalogue==2.0.10",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "chonkie==1.6.6",
    "chonkie-core==0.10.1",
    "click==8.3.3",
    "cloudpathlib==0.24.0",
    "colorama==0.4.6",
    "confection==1.3.3",
    "cymem==2.0.13",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.18.0",
    "email-validator==2.3.0",
    "emoji==2.15.0",
    "fastapi==0.136.1",
    "filelock==3.29.0",
    "filetype==1.2.0",
    "fsspec==2026.4.0",
    "gitdb==4.0.12",
    "gitpython==3.1.50",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.5.0",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==1.14.0",
    "hyperframe==6.1.0",
    "idna==3.13",
    "installer==0.7.0",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "joblib==1.5.3",
    "langdetect==1.0.9",
    "lazy-model==0.4.0",
    "llvmlite==0.47.0",
    "lxml==6.1.0",
    "markdown==3.10.2",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "model2vec==0.8.1",
    "motor==3.7.1",
    "murmurhash==1.0.15",
    "numba==0.65.1",
    "numpy==2.4.4",
    "olefile==0.47",
    "openai==2.37.0",
    "packaging==26.2",
    "preshed==3.0.13",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pymongo==4.17.0",
    "pypdf==6.10.2",
    "pypdfium2==5.8.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-iso639==2026.4.20",
    "python-magic==0.4.27",
    "python-multipart==0.0.27",
    "python-oxmsg==0.0.2",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.5",
    "regex==2026.5.9",
    "requests==2.34.1",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.6.1",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "spacy==3.8.14",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.3",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "thinc==8.3.13",
    "tokenizers==0.23.1",
    "tokie==0.0.9",
    "tqdm==4.67.3",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "unstructured==0.22.28",
    "unstructured-client==0.44.0",
    "urllib3==2.7.0",
    "uvicorn==0.46.0",
    "wasabi==1.1.3",
    "watchfiles==1.1.1",
    "weasel==1.0.0",
    "webencodings==0.5.1",
    "websockets==16.0",
    "wrapt==2.1.2",
]

[project.scripts]
cortex = "src.main:main"

[tool.uv]
python-preference = "system"
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    "venv",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".vscode",
]
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC", "TID"]
ignore = ["E501", "S101"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \venv
  | \.venv
  | build
  | dist
  | __pycache__
  | \.vscode
)/
'''
